tests/macro-tests/cases/widget_new/unknown_special_value_in_when.stderr
error: unexpected token, expected `}`
 --> cases/widget_new/unknown_special_value_in_when.rs:9:25
  |
9 |             margin = foo!;
  |                         ^

warning: unused imports: `gesture::is_pressed` and `layout::margin`
 --> cases/widget_new/unknown_special_value_in_when.rs:1:16
  |
1 | use zng::{APP, gesture::is_pressed, layout::margin, widget::Wgt};
  |                ^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
